# audiocraft-docker

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
